// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generated file includes TokenRefSchema in every property schema 1`] = `
{
  "header": 
"// @ts-nocheck
/**
 * Auto-generated CSS property schemas and types.
 * Generated by \`scripts/generate-css-schemas.ts\` from @webref/css CSS property data.
 * Do not edit manually.
 */
import { z } from 'zod'
import { TokenRefSchema, KeyframeRefSchema } from './css.input-schemas.ts'

/**"
,
  "keyframeCases": 
"  case "-webkit-animation": return z.union([z.union([z.string(), z.number()]), TokenRefSchema, KeyframeRefSchema])
  case "-webkit-animation-name": return z.union([z.union([z.string(), z.number()]), TokenRefSchema, KeyframeRefSchema])
  case "WebkitAnimation": return z.union([z.union([z.string(), z.number()]), TokenRefSchema, KeyframeRefSchema])
  case "WebkitAnimationName": return z.union([z.union([z.string(), z.number()]), TokenRefSchema, KeyframeRefSchema])
  case "animation": return z.union([z.union([z.string(), z.number()]), TokenRefSchema, KeyframeRefSchema])
  case "animation-name": return z.union([z.union([z.string(), z.number()]), TokenRefSchema, KeyframeRefSchema])
  case "animationName": return z.union([z.union([z.string(), z.number()]), TokenRefSchema, KeyframeRefSchema])
  case "webkitAnimation": return z.union([z.union([z.string(), z.number()]), TokenRefSchema, KeyframeRefSchema])
  case "webkitAnimationName": return z.union([z.union([z.string(), z.number()]), TokenRefSchema, KeyframeRefSchema])"
,
  "typeTail": 
"  "zIndex"?: string | number,
  "zoom"?: string | number,
  [key: string]: string | number,
}
"
,
}
`;

exports[`generated file snapshot matches 1`] = `
{
  "header": 
"// @ts-nocheck
/**
 * Auto-generated CSS property schemas and types.
 * Generated by \`scripts/generate-css-schemas.ts\` from @webref/css CSS property data.
 * Do not edit manually.
 */
import { z } from 'zod'

/**
 * Schema for valid CSS property names (kebab and camel case).
 */"
,
  "typeTail": 
"  "zIndex"?: string | number,
  "zoom"?: string | number,
  [key: string]: string | number,
}
"
,
}
`;

exports[`generated file includes TokenRefSchema in every case and KeyframeRefSchema only for animation/animation-name 1`] = `
{
  "header": 
"// @ts-nocheck
/**
 * Auto-generated CSS property schemas and types.
 * Generated by \`scripts/generate-css-schemas.ts\` from @webref/css CSS property data.
 * Do not edit manually.
 */
import { z } from 'zod'
import { TokenRefSchema, KeyframeRefSchema } from './css.input-schemas.ts'

/**
 * Schema for valid CSS property names (kebab and camel case).
 */"
,
  "typeTail": 
"  "zIndex"?: string | number,
  "zoom"?: string | number,
  [key: string]: string | number,
}
"
,
}
`;
